--- a/client/src/assets/styles/global.css
+++ b/client/src/assets/styles/global.css
@@ -44,3 +44,7 @@
 * {
 	margin: 0;
 }
+
+html {
+	background: var(--gold-5);
+}
